[package]
name = "rococo-parachain-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bstringify = "0.1.2"
# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
serde_json = { version = "1.0.64" }

[features]
default = [ "std" ]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
]
